// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-feature alignfull ugb-feature ugb--background-opacity-2 ugb-feature--design-design ugb-feature--content-contentAlign ugb-feature--invert ugb--has-background ugb--has-background-image ugb--content-width ugb--shadow-1 className"
  style={
    Object {
      "--image-size": "200px",
      "--ugb-background-color": "#123456",
      "backgroundAttachment": "fixed",
      "backgroundColor": "#123456",
      "backgroundImage": "url(backgroundImageURL)",
      "borderRadius": 6,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div
      className="ugb-feature__content"
    >
      <h2
        className="ugb-feature__title"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title",
            }
          }
        />
      </h2>
      <p
        className="ugb-feature__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-contentAlign ugb-button--size-buttonSize ugb-button--design-buttonDesign ugb-button--has-icon"
          href="buttonURL"
          style={
            Object {
              "backgroundColor": "#123456",
              "borderColor": undefined,
              "borderRadius": "2px",
              "color": "#123456",
            }
          }
          target="_blank"
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": "#123456",
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "buttonText",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <div
      className="ugb-feature__image-side"
    >
      <img
        alt="title"
        className="ugb-feature__image"
        src="https://imageUrl.com"
        style={
          Object {
            "borderRadius": undefined,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Feature block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-feature ugb-feature ugb--background-opacity-5 ugb-feature--design-plain ugb-feature--content-left"
  style={
    Object {
      "--image-size": "400px",
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": undefined,
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div
      className="ugb-feature__content"
    >
      <h2
        className="ugb-feature__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title for This Block",
            }
          }
        />
      </h2>
      <p
        className="ugb-feature__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-left ugb-button--size-normal"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": "4px",
              "color": undefined,
            }
          }
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <div
      className="ugb-feature__image-side"
    />
  </div>
</div>
`;
